--- a/WPF EDI/WPF EDI.csproj
+++ b/WPF EDI/WPF EDI.csproj
@@ -67,6 +67,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BadChars.cs" />
+    <Compile Include="physIdentQualifier.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
